# FFmpegBuildForNdk

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt  copy_headers.cmake  ffmpeg.cmake  ffmpeg_build_system.cmake  libx264.cmake  native-lib.cpp
app/src/main/java/com/example/nativeapp/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
